Tue Jan 29 15:24:59 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfontsel.[ch]: Switch over to GtkTreeView from
	GtkCList. Remove the entries above the font/face lists 
	since they were a little confusing. (Not sure about this 
	change, so the code is still there the entries are
	just hidden.) (#68890)

	* gtk/gtkfilesel.c: Switch over to GtkTreeView from
	GtkCList. Add mnemonics for fileops. Allow Control/Shift
	Tab to focus out.

	* gtk/gtkfilesel.c: Make fileop dialogs transient-for
	the fileselector. (#69336, patch from Melvin Hadasht)

	* gtk/gtkgamma.c (button_clicked_callback): Fix handling
	of gamma dialog a bit. (#69336, Matthias Clasen.)

Tue Jan 29 14:56:28 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtksocket.c (toplevel_focus_out_handler): Return boolean
	(and FALSE from focus_in / focus_out handlers. (#69528,
	Padraig O'Briain)

Tue Jan 29 14:47:54 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_init_check): Remove the scary startup
	warning. (#69480)

Tue Jan 29 14:24:49 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_class_init): Add <Control>Tab
	bindings for "move-focus" so that Control-Tab to escape from
	something that eats Tab just works if not otherwise overriden.

	* gtk/gtkspinbutton.c (gtk_spin_button_new_with_range) 
	* gtk/gtkvscale.c (gtk_vscale_new_with_range)
	* gtk/gtkhscale.c (gtk_hscale_new_with_range): Use a page_size
	of zero for the adjustment, since at times we think that the range
	is lower to upper - page_size. A page size equally to the 
	step_increment is, in any case, not meaningful.

2002-01-29  Tor Lillqvist  <tml@iki.fi>

	* README.win32: Add comment about gtk-1-3-win32-production branch
 	currently being ahead in functionality and code cleanliness (in
 	gdk/win32). Just in case somebody looks at the code in gdk/win32
 	here and starts fixing it, when it is going to change soonish
 	anyway.

2002-01-29  Sven Neumann  <sven@gimp.org>
